--- a/QualiJiraPlugin/src/main/resources/admin.vm
+++ b/QualiJiraPlugin/src/main/resources/admin.vm
@@ -116,7 +116,7 @@ function updateConfig() {
                </div>
 
       <div class="field-group">
-              <label for="csuser">$i18n.getText("quali.admin.sandbox_owner.label")</label>
+              <label for="sandbox_owner">$i18n.getText("quali.admin.sandbox_owner.label")</label>
          <input type="text" id="sandbox_owner" name="sandbox_owner" class="text" placeholder="Support">
        </div>
 
