--- a/QualiJiraPlugin/src/main/resources/templates/cloud-shell-plugin/openinqualicloudshell/success.vm
+++ b/QualiJiraPlugin/src/main/resources/templates/cloud-shell-plugin/openinqualicloudshell/success.vm
@@ -4,7 +4,7 @@ $action.getWarning()
 <br>
 $action.getError()
 <br>
-<!-- $action.getDebug() -->
+$action.getDebug()
 <h2>$action.getClickHereMessage()
 <a target="_new" href="$action.getPortalurl()/RM/Diagram/Index/$action.getResid()">$action.getResname()</a>
 <br></h2>
